Fix html and add port env variable for db

--- a/lab02/form-frontend/form.html
+++ b/lab02/form-frontend/form.html
@@ -64,7 +64,7 @@
 
             console.log("Fetching movies");
 
-            fetch('/movies')
+            fetch('/lab02-form-frontend/movies')
                 .then(response => response.json())
                 .then(data => {
                     console.log(data)
