--- a/lab02/form-frontend/form.html
+++ b/lab02/form-frontend/form.html
@@ -11,21 +11,23 @@
 
     <h1>Recommender</h1>
 
-    <form class="recommendForm">
+    <div class="recommendForm">
 
-        <label for="username">Username</label><br>
+        <label for="username">Username:</label><br>
         <input type="text" id="username">
 
-        <label for="movieSelect">Movie</label><br>
+        <label for="movieSelect">Movie:</label><br>
         <select name="movies" id="movieSelect">
             
         </select>
+        <br>
 
-        <label for="rating">Rating (between 0 and 10):</label>
-        <input type="range" id="rating" name="rating" min="0" max="10" step="0.5"> 
+        <label for="rating">Rating (between 0 and 10):</label><br>
+        <input type="number" name="rating" id="rating" min="0" max="10" step="0.5">
 
+        <br>
         <button onclick="submitForm()">Submit</button>
-    </form>
+    </div>
     
 
 
