--- a/lab05/form-frontend/form.html
+++ b/lab05/form-frontend/form.html
@@ -116,7 +116,7 @@
 
             console.log("Fetching movies");
 
-            fetch('/lab02-form-frontend/movies')
+            fetch('/movies')
                 .then(response => response.json())
                 .then(data => {
                     console.log(data)
